--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
             <!-- Hide image on desktop since it's shown above on mobile -->
             <div class="d-none d-lg-block mb-4">
-              <img src="assets/img/about1.webp" class="img-fluid rounded-4"
+              <img src="assets/img/about1.jpg" class="img-fluid rounded-4"
                 alt="مدينة مصر للتطوير العقاري - الشعار الرسمي">
             </div>
 
