--- a/index.html
+++ b/index.html
@@ -33,19 +33,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-5N5VH2LZ');
-  </script>
-
+ 
 
 </head>
 
@@ -283,7 +271,7 @@
 
               <!-- Image 2: Show below text on mobile, inline on desktop -->
               <div class="position-relative mt-4">
-                <img src="assets/img/about2.jpg" class="img-fluid rounded-4"
+                <img src="assets/img/about1.jpg" class="img-fluid rounded-4"
                   alt="مدينة مصر للتطوير العقاري - صورة توضيحية">
               </div>
             </div>
@@ -554,7 +542,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/tajcityimg.webp" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/vida-r.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
 
@@ -650,7 +638,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/sraiimg.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/hillSSS.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
                     </div>
@@ -743,7 +731,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/rai_2.png" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/city.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
                     </div>
@@ -883,7 +871,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/tajcityimg.webp" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/gardens.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
 
@@ -975,7 +963,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/sraiimg.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/ray2 (1).jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1025,7 +1013,7 @@
               style="text-align:center; color:#011E60; font-weight:700; font-size:30px; margin-bottom:20px;"
               type="button" data-bs-toggle="collapse" data-bs-target="#flush-3" aria-expanded="false"
               aria-controls="flush-3">
-              لافيستا الساحل الشمالي - LA VISTA North Coast –
+              لافيستا الساحل الشمالي - LA VISTA North Coast 
             </button>
           </h2>
           <div id="flush-3" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -1116,7 +1104,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/tajcityimg.webp" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/hikma.jpeg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
 
@@ -1209,7 +1197,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/sraiimg.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/eastbay.jpeg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1343,7 +1331,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/tajcityimg.webp" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/solA.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
 
@@ -1439,7 +1427,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/clients/sraiimg.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/el-patio-hills-new-cairo-compound-la-vista-developments-p3H7Zwsu1z.webp" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
                           class="img-fluid">
                       </div>
                     </div>
