--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>la-vistadevlopment </title>
-  <meta name="description"
-    content="اكتشف أحدث مشاريع مدينة مصر العقارية – شقق وفيلات استلام فوري بمساحات تبدأ من 90 متر، بمقدم يبدأ من 5% وأقساط حتى 7 سنوات. تواصل معنا الآن لمعرفة المزيد.">
-  <meta name="description"
-    content="Explore madinet masr Development – Ready-to-move apartments and villas starting from 90 sqm, with only 5% down payment and installments up to 7 years. Contact us today!">
-
+  <title>La-Vista Devlopment </title>
   <meta name="keywords" content="">
 
   <!-- Favicons -->
