--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
           <li><a href="#features"
               style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600;">مشاريعنا</a>
           </li>
-          <!-- <li><a href="#portfolio" style="font-family: 'Cairo', sans-serif; font-size:18px; font-weight:600;">أعمالنا</a></li> -->
-          <!-- <li><a href="#team" style="font-family: 'Cairo', sans-serif; font-size:18px; font-weight:600;">فريق العمل</a></li> -->
           <li>
             <a href="https://wa.me/201050564000" target="_blank"
               style="font-family: 'Cairo', sans-serif; font-size:15px; font-weight:600; color:#fff; text-decoration:none;">
@@ -79,7 +77,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero_img.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي" data-aos="fade-in">
+      <img src="assets/img/hero_img.jpg" alt="لافيستا" data-aos="fade-in">
 
 
       <div class="container d-flex flex-column align-items-center">
@@ -103,7 +101,7 @@
 
         <!-- Mobile: Image 1 -->
         <div class="d-lg-none mb-4 text-center">
-          <img src="assets/img/about1.jpg" class="img-fluid rounded-4" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي">
+          <img src="assets/img/about1.jpg" class="img-fluid rounded-4" alt="لافيستا">
         </div>
 
         <div class="row gy-4">
@@ -114,7 +112,7 @@
             <!-- Hide image on desktop since it's shown above on mobile -->
             <div class="d-none d-lg-block mb-4">
               <img src="assets/img/about2.jpg" class="img-fluid rounded-4"
-                alt="مدينة مصر للتطوير العقاري - الشعار الرسمي">
+                alt="لافيستا">
             </div>
 
             <h3
@@ -336,7 +334,7 @@
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/projects/El Patio Riva.jpeg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+            <img src="assets/img/projects/El Patio Riva.jpeg" alt="لافيستا"
               class="img-fluid" style="height:400px; width: 100%; object-fit:cover;">
           </div>
 
@@ -476,7 +474,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/vida-r.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/vida-r.jpg" alt="لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -572,7 +570,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hillSSS.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/hillSSS.jpg" alt="لافيستا"
                           class="img-fluid">
                       </div>
                     </div>
@@ -665,7 +663,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/city.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/city.jpg" alt="Patio City"
                           class="img-fluid">
                       </div>
                     </div>
@@ -830,7 +828,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/gardens.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/gardens.jpg" alt="لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -953,7 +951,7 @@
                       
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/ray2 (1).jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/ray2 (1).jpg" alt="لافيستا"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1112,7 +1110,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/hikma.jpeg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/hikma.jpeg" alt="لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -1232,7 +1230,7 @@
 
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/eastbay.jpeg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/eastbay.jpeg" alt="لافيستا"
                           class="img-fluid">
                       </div>
                     </div>
@@ -1366,7 +1364,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/solA.jpg" alt="مدينة مصر للتطوير العقاري - الشعار الرسمي"
+                        <img src="assets/img/projects/solA.jpg" alt="لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -1463,8 +1461,7 @@
                       </div>
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
                         <img
-                          src="assets/img/projects/el-patio-hills-new-cairo-compound-la-vista-developments-p3H7Zwsu1z.webp"
-                          alt="مدينة مصر للتطوير العقاري - الشعار الرسمي" class="img-fluid">
+                          alt="لافيستا" class="img-fluid">
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
@@ -1594,7 +1591,7 @@
                       </div>
 
                       <div class="col-lg-6 order-1 order-lg-2 text-center">
-                        <img src="assets/img/projects/oct.webp" alt="مدينة مصر للتطوير العقاري - اsssssلشعار الرسمي"
+                        <img src="assets/img/projects/oct.webp" alt=" لافيستا"
                           class="img-fluid">
                       </div>
 
@@ -1709,9 +1706,7 @@
           </a>
           <div class="footer-contact pt-3">
             <p>
-              تأسست مدينة مصر في عام 1959، وهي شركة رائدة في مجال التطوير العقاري مكرسة لبناء مجتمعات كبيرة في مواقع
-              استراتيجية في جميع أنحاء مصر.
-            </p>
+              تأسست شركة لا فيستا للتطوير عام ١٩٩١ على يد المهندس المعماري علاء هادي والمهندس محمد هادي، وتفخر الشركة بوضع معايير جديدة في عالم المنتجعات والسكن من خلال سجلها الحافل بالإنجازات. مع مكتب تصميم داخلي يضم فريقًا من المهندسين المعماريين ومصممي المناظر الطبيعية ذوي الخبرة،            </p>
 
           </div>
         </div>
