--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 
         <div class="form-container">
-          <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+          <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista El Patio Riva')">
             <!-- العنوان والوصف -->
             <div class="form-header">
               <h3>سجّل بياناتك الآن</h3>
@@ -357,12 +357,12 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="name" class="form-label">الاسم</label>
-                <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
               </div>
 
               <div class="form-group">
                 <label for="phone" class="form-label">رقم الموبايل</label>
-                <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX" required>
+                <input type="tel" class="form-control" name="phone" placeholder="01XXXXXXXXX" required>
               </div>
             </div>
 
@@ -482,7 +482,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista Patio Vida')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -496,12 +496,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX"
+                            <input type="tel" class="form-control" name="phone" placeholder="01XXXXXXXXX"
                               required>
                           </div>
                         </div>
@@ -575,7 +575,7 @@
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
-                      <form class="form-wrapper" onsubmit="handleSubmit(event,'sarai')">
+                      <form class="form-wrapper" onsubmit="handleSubmit(event,'LA Vista Patio Hills')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -590,12 +590,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_sarai" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_sarai" placeholder="01XXXXXXXXX" required>
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX" required>
                           </div>
                         </div>
 
@@ -668,7 +668,7 @@
                       </div>
                     </div>
                     <div class="form-container">
-                      <form class="form-wrapper" onsubmit="handleSubmit(event,'talala')">
+                      <form class="form-wrapper" onsubmit="handleSubmit(event,'LA Vista Patio City')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -683,12 +683,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_talala" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_talala" placeholder="01XXXXXXXXX" required>
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX" required>
                           </div>
                         </div>
 
@@ -836,7 +836,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista Gardens')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -850,12 +850,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX"
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX"
                               required>
                           </div>
                         </div>
@@ -956,7 +956,7 @@
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
-                      <form class="form-wrapper" onsubmit="handleSubmit(event,'sarai')">
+                      <form class="form-wrapper" onsubmit="handleSubmit(event,'LA Vista Ray')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -971,12 +971,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_sarai" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_sarai" placeholder="01XXXXXXXXX" required>
+                            <input type="tel" class="form-control"  name="phone "placeholder="01XXXXXXXXX" required>
                           </div>
                         </div>
 
@@ -1118,7 +1118,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista Ras El Hekma')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -1132,12 +1132,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control"  name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX"
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX"
                               required>
                           </div>
                         </div>
@@ -1235,7 +1235,7 @@
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
-                      <form class="form-wrapper" onsubmit="handleSubmit(event,'sarai')">
+                      <form class="form-wrapper" onsubmit="handleSubmit(event,'LA Vista Bay East')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -1250,12 +1250,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_sarai" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name" placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_sarai" placeholder="01XXXXXXXXX" required>
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX" required>
                           </div>
                         </div>
 
@@ -1372,7 +1372,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'El Patio Sola')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -1386,12 +1386,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name"  placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX"
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX"
                               required>
                           </div>
                         </div>
@@ -1465,7 +1465,7 @@
                       </div>
                     </div>
                     <div class="form-container" id="sarai-form">
-                      <form class="form-wrapper" onsubmit="handleSubmit(event,'sarai')">
+                      <form class="form-wrapper" onsubmit="handleSubmit(event,'LA Vista Patio Hills')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -1480,12 +1480,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_sarai" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name"  placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_sarai" placeholder="01XXXXXXXXX" required>
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX" required>
                           </div>
                         </div>
 
@@ -1599,7 +1599,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'tajcity')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista 6th Of October')">
                         <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
@@ -1613,12 +1613,12 @@
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
-                            <input type="text" class="form-control" id="name_tajcity" placeholder="أدخل اسمك" required>
+                            <input type="text" class="form-control" name="name"  placeholder="أدخل اسمك" required>
                           </div>
 
                           <div class="form-group">
                             <label for="phone" class="form-label">رقم الموبايل</label>
-                            <input type="tel" class="form-control" id="phone_tajcity" placeholder="01XXXXXXXXX"
+                            <input type="tel" class="form-control" name="phone"  placeholder="01XXXXXXXXX"
                               required>
                           </div>
                         </div>
@@ -1666,17 +1666,17 @@
             </div>
 
             <!-- الاسم والموبايل -->
-            <form onsubmit="handleSubmit(event,'mnhd all')">
+            <form onsubmit="handleSubmit(event,'Lavista All')">
 
               <div class="form-row">
                 <div class="form-group">
                   <label for="name" class="form-label">الاسم</label>
-                  <input type="text" class="form-control" id="name_sheet1" name="name" placeholder="أدخل اسمك" required>
+                  <input type="text" class="form-control"  name="name" placeholder="أدخل اسمك" required>
                 </div>
 
                 <div class="form-group">
                   <label for="phone" class="form-label">رقم الموبايل</label>
-                  <input type="tel" class="form-control" id="phone_sheet1" name="phone" placeholder="01XXXXXXXXX"
+                  <input type="tel" class="form-control"  name="phone" placeholder="01XXXXXXXXX"
                     required>
                 </div>
               </div>
