--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item">
+        <!-- <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed"
               style="text-align:center; color:#011E60; font-weight:700; font-size:30px; margin-bottom:20px;"
@@ -1529,7 +1529,7 @@
                   </li>
 
 
-                </ul><!-- End Tab Nav -->
+                </ul>
 
 
                 <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
@@ -1550,7 +1550,6 @@
                         </p>
 
 
-                        <!-- Location section -->
                         <p style="font-size: 17px; color:#444; margin-bottom:10px;">
                           <i class="bi bi-geo-alt-fill" style="color:#011E60; margin-left:6px;"></i>
                           <strong>الموقع:</strong>
@@ -1600,7 +1599,6 @@
 
                     <div class="form-container">
                       <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista 6th Of October')">
-                        <!-- العنوان والوصف -->
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
                           <p>
@@ -1609,7 +1607,6 @@
                           </p>
                         </div>
 
-                        <!-- الاسم والموبايل -->
                         <div class="form-row">
                           <div class="form-group">
                             <label for="name" class="form-label">الاسم</label>
@@ -1630,7 +1627,7 @@
                     </div>
 
 
-                  </div><!-- End Tab Content Item -->
+                  </div>
 
 
                 </div>
@@ -1638,7 +1635,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section><!-- /Features Section -->
 
