--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="accordion-item">
+         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed"
               style="text-align:center; color:#011E60; font-weight:700; font-size:30px; margin-bottom:20px;"
@@ -1598,7 +1598,7 @@
 
 
                     <div class="form-container">
-                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,'LA Vista 6th Of October')">
+                      <form class="form-wrapper" id="form" onsubmit="handleSubmit(event,' LA Vista Patio Vera')">
                         <div class="form-header">
                           <h3>سجّل بياناتك الآن</h3>
                           <p>
@@ -1635,7 +1635,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div> 
       </div>
     </section><!-- /Features Section -->
 
